@startuml

skinparam backgroundColor #FFFFFF
skinparam monochrome true
skinparam shadowing false
skinparam defaultFontName "PingFang SC"
skinparam defaultFontSize 18
skinparam classFontSize 18
skinparam classAttributeFontSize 16
skinparam classBackgroundColor White
skinparam classBorderColor Black
skinparam arrowColor Black
hide circle

class CoverageRunner {
  + run(source, test): CoverageRunResult
}
class TestDetail {
  + name: str
  + status: str
  + message: str
  + duration_ms: float
}
class CoverageRunResult {
  + total: int
  + passed: int
  + pass_rate: float
  + line_coverage: float
  + branch_coverage: float
  + details: List<TestDetail>
}
CoverageRunner --> CoverageRunResult
CoverageRunResult --> TestDetail
@enduml
